--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,9 @@ f451-*.tar
 # Ignore assets that are produced by build tools.
 /priv/static/assets/
 
+# Ignore uploads files
+/uploads/
+
 # Ignore digested assets cache.
 /priv/static/cache_manifest.json
 
